alignment issues

--- a/src/App.css
+++ b/src/App.css
@@ -7,9 +7,15 @@
 body{
   background: #1c4b69;
   overflow: hidden;
-  max-width: 220vh;
+  max-width: 100%;
   height: 120vh;
 
+}
+.App {
+  position: relative;
+  width: 100vw;
+  height: 100vh;
+  overflow: hidden;
 }
 .square1{
   position: absolute;
@@ -20,6 +26,7 @@ body{
   transform: rotate(-50deg);
   transform-origin: 10% 90%;
   z-index: -1;
+  overflow: hidden;
 }
 
 .square2{
@@ -31,6 +38,8 @@ body{
   transform: rotate(-50deg); 
   transform-origin: 30% 90%;
   z-index: -1;
+  overflow: hidden;
+
 }
 
 .square3{
@@ -42,5 +51,6 @@ body{
   transform: rotate(-50deg); 
   transform-origin: 45% 100%;
   z-index: -1;
+  overflow: hidden;
 
 }
